--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,34 +12,42 @@
   <mat-drawer mode="side" opened #drawer>
 
     <mat-nav-list role="list">
-      <div mat-subheader class="subheader">Lavaderos</div>
-      <a mat-list-item routerLink="/table">Tabla Lavaderos</a>
-      <mat-list-item role="listitem" mat-button [matMenuTriggerFor]="menuLavadero">Menu Lavaderos
-        <mat-menu #menuLavadero="matMenu">
-          <button mat-menu-item>Catalogo</button>
-          <button mat-menu-item>Reservas</button>
-        </mat-menu></mat-list-item>
-    </mat-nav-list>
-    <mat-divider></mat-divider>
-    <mat-nav-list role="list">
-      <div mat-subheader class="subheader">Usuarios</div>
-      <a mat-list-item routerLink="/table">Tabla Usuarios</a>
-      <mat-list-item role="listitem" mat-button [matMenuTriggerFor]="menuUsuario">Menu Usuarios
-        <mat-menu #menuUsuario="matMenu">
-          <button mat-menu-item>Item 1</button>
-          <button mat-menu-item>Item 2</button>
-        </mat-menu></mat-list-item>
-    </mat-nav-list>
-    <mat-divider></mat-divider>
-    <mat-nav-list role="list">
       <div mat-subheader class="subheader">Reservas</div>
-      <a mat-list-item routerLink="/table">Tabla Reservas</a>
-      <mat-list-item role="listitem" mat-button [matMenuTriggerFor]="menuReserva">Menu Reservas
+      <a mat-list-item routerLink="/table">Ver reservas activas</a>
+      <a mat-list-item routerLink="/table">Agregar nueva reserva</a>
+      <a mat-list-item routerLink="/table">Cancelar reserva</a>
+      <!-- <mat-list-item role="listitem" mat-button [matMenuTriggerFor]="menuReserva">Agregar nueva reserva
         <mat-menu #menuReserva="matMenu">
           <button mat-menu-item>Item 1</button>
           <button mat-menu-item>Item 2</button>
-        </mat-menu></mat-list-item>
+        </mat-menu></mat-list-item> -->
     </mat-nav-list>
+    <mat-divider></mat-divider>
+    <mat-nav-list role="list">
+      <div mat-subheader class="subheader">Historial de Lavados</div>
+      <a mat-list-item routerLink="/table">Ver estadísticas generales</a>
+      <a mat-list-item routerLink="/table">Ver historial de lavados</a>
+      <a mat-list-item routerLink="/table">Filtrar estadísticas e historial<br>por fechas o vehículos específicos</a>
+      <!-- <mat-list-item role="listitem" mat-button [matMenuTriggerFor]="menuUsuario">Menu Usuarios
+        <mat-menu #menuUsuario="matMenu">
+          <button mat-menu-item>Item 1</button>
+          <button mat-menu-item>Item 2</button>
+        </mat-menu></mat-list-item> -->
+    </mat-nav-list>
+    <mat-divider></mat-divider>
+    <mat-nav-list role="list">
+      <div mat-subheader class="subheader">Perfil del Lavadero</div>
+      <a mat-list-item routerLink="/table">Ver y editar información del lavadero</a>
+      <a mat-list-item routerLink="/table">Ver y editar información de los empleados</a>
+      <a mat-list-item routerLink="/table">Ver y editar información de los servicios ofrecidos</a>
+      <a mat-list-item routerLink="/table">Ver y editar horarios de atención</a>
+      <!-- <mat-list-item role="listitem" mat-button [matMenuTriggerFor]="menuLavadero">Menu Lavaderos
+        <mat-menu #menuLavadero="matMenu">
+          <button mat-menu-item>Catalogo</button>
+          <button mat-menu-item>Reservas</button>
+        </mat-menu></mat-list-item> -->
+    </mat-nav-list>
+
     </mat-drawer>
   <mat-drawer-content>
     <router-outlet></router-outlet>
